Column menu no longer covers button (requested by Pral)
Former-commit-id: dd2e0a5ec7f1b35b27b0249ac488dcf50ae95688

--- a/src/customTable.css
+++ b/src/customTable.css
@@ -25,10 +25,13 @@
 }
 
 #simple-menu {
-  max-height: 600px;
+  max-height: 470px;
+  outline: none;
+  overflow: auto;
 }
 
 #simple-menu .MuiListItem-root {
+  width: 215px;
   padding: 2px 36px;
 }
 
